--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Hello</title>
 </head>
 <body>
-<h1>HELLO WORLD!!</h1>
+    
+    <h1><center>Manaswini Burgupalli!!</h1></center>
 </body>
 </html>
