--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1><center>Manaswini Burgupalli!!</h1>
+    <h1><center>Manaswini Burgupalli</h1>
 </body>
 </html>
