--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>My website</title>
+    <link rel="stylesheet" type="text/css" href="/Users/bmanaswini/Desktop/manaswini0.github.io/style.css"> 
 </head>
 <body>
-    <h1><center>Manaswini Burgupalli</h1>
+  <h1><center>Manaswini Burugupalli</h1>
+  
 </body>
 </html>
