--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" type="text/css" href="/Users/bmanaswini/Desktop/manaswini0.github.io/style.css"> 
 </head>
 <body>
-  <h1><center>Manaswini Burugupalli</h1>
+   <h1><center>Manaswini Burugupalli</h1>
+    <div id="content">
+  <p>Hello there! My name is Manaswini. I am an undergraduate at University at Buffalo studying computer science. My passions include coding, dancing and coffee. I would love to code while dancing and sip coffee in between. I am trying to improve my coding skills everyday by trying to learn one new thing every single day in the world of coding. As a result of that this website was built:)</p>
+    </div>
   
 </body>
 </html>
