--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My website</title>
-    <link rel="stylesheet" type="text/css" href="/manaswini0.github.io/style.css"> 
+    <link rel="stylesheet" type="text/css" href="manaswini0.github.io/style.css"> 
 </head>
 <body>
    <h1><center>Manaswini Burugupalli</h1>
