--- a/index.html
+++ b/index.html
@@ -2,14 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My website</title>
-    <link rel="stylesheet" type="text/css" href="manaswini0.github.io/style.css"> 
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
-   <h1><center>Manaswini Burugupalli</h1>
-    <div id="content">
-  <p>Hello there! My name is Manaswini. I am an undergraduate at University at Buffalo studying computer science. My passions include coding, dancing and coffee. I would love to code while dancing and sip coffee in between. I am trying to improve my coding skills everyday by trying to learn one new thing every single day in the world of coding. As a result of that this website was built:)</p>
-    </div>
-  
+
+<div class="bar">
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
+    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a>
+</div>
+
+
+
+<header class="w3-container w3-center w3-padding-48 w3-white">
+    <h1 class="w3-xxxlarge"><b>MANASWINI BURUGUPALLI</b></h1>
+    <h6 class="code">Coder, <span class="w3-tag">Writer</span></h6>
+    <p>
+        Hey there, Welcome!
+
+    </p>
+</header>
+
+
+<div class="container">
+<img class="projects" src="projects1.jpg" alt="projects">
+<div class="myprojects">My Projects</div>
+</div>
+
+<div class="container">
+    <img class="writings" src="writings.jpg" alt="writings">
+    <div class="my_writings">My Writings</div>
+</div>
+
+
+
+
+<div class="contact">
+    <center>
+    <h1 class="heading">Contact Me</h1>
+    <h2 class="email">Email: manaswin@buffalo.edu</h2>
+    <h3 class="phone">Phone:+1 7167309398</h3>
+    </center>
+</div>
+
+
 </body>
 </html>
