--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
 
 <div class="bar">
-    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
-    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
-    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>
-    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>
-    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
-    <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a>
+    <a href="https://www.facebook.com/manaswini.b.391/" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
+    <a href="https://www.instagram.com/manaswini.123/" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.snapchat.com/manaswini.123" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>
+    <a href="https://www.linkedin.com/in/manaswini-burugupalli-51a9b4176" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
+    <a href="https://github.com/manaswini0" class="w3-bar-item w3-button"><i class="fa fa-github"></i></a>
+    <!--<a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a>-->
+
 </div>
 
 
@@ -41,7 +41,8 @@
 
 <div class="container">
     <img class="writings" src="writings.jpg" alt="writings">
-    <div class="my_writings">My Writings</div>
+    <div class="my_writings">
+        <a href="https://www.instagram.com/my_wordsworld/" target="_blank">My Writings!</a></div>
 </div>
 
 
