--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="container">
     <img class="writings" src="writings.jpg" alt="writings">
     <div class="my_writings">
-        <a href="https://www.instagram.com/my_wordsworld/" target="_blank">My Writings!</a></div>
+        <a href="writings.html" target="_blank">My Writings!</a></div>
 </div>
 
 
